tests/data/string/indexof/negative/Char Int32 Int32.fs
open System
"foo".IndexOf('f',0,1)
